# make_space_for_notes_on_pdf

./: README.md  apply_margins.py  cli.py  conv.py  pyproject.toml  shell.nix
make_space_for_notes_on_pdf/: cli.py
scripts/: example_usage.sh
test/: test_e2e.py
